# 4-06-2025-Proje

./: app.py  model.py  pyproject.toml  save_model.py
models/: feature_names.pkl  feature_scaler.pkl  house_price_model.pkl
